# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/assinafy/: __init__.py  client.py  errors.py  types.py  utils.py
src/assinafy/resources/: __init__.py  assignments.py  authentication.py  base.py  documents.py  fields.py  signer_documents.py  signers.py  templates.py  webhooks.py
src/assinafy/support/: webhook_verifier.py
tests/: conftest.py  test_client.py  test_utils.py
tests/resources/: test_assignments.py  test_authentication.py  test_documents.py  test_fields.py  test_signer_documents.py  test_signers.py  test_webhooks.py
tests/support/: test_webhook_verifier.py
