[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assinafy-sdk"
version = "1.1.0"
description = "Python SDK for Assinafy API - Digital signature platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Assinafy API Team" }]
keywords = [
    "assinafy",
    "assinafy-api",
    "assinatura-eletronica",
    "assinatura-digital",
    "digital-signature",
    "electronic-signature",
    "signature",
    "pdf",
    "webhook",
    "sdk",
    "api-client",
    "python",
    "brazil",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Repository = "https://github.com/assinafy/python-sdk"
Issues = "https://github.com/assinafy/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/assinafy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N802", "N803"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["assinafy"]
disable_error_code = ["no-any-return", "valid-type"]
